<?xml version="1.0"?>
<package format="3">
  <name>ltm_package</name>
  <version>0.0.1</version>
  <description>ROS2 Long Term Memory Service</description>
  <maintainer email="hopkira@gmail.com">Richard Hopkins</maintainer>
  <license>CC0 1.0 Universal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-ollama-pip</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>