<?xml version="1.0"?>
<package format="3">
  <name>ltm_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 Long Term Memory Service</description>
  <maintainer email="hopkira@gmail.com">Richard Hopkins</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <service_interface file="ltm_query.srv"></service_interface>
    <service_interface file="ltm_remember.srv"></service_interface>
    <service_interface file="ltm_set_model.srv"></service_interface>
  </export>
</package>